third_party/move/move-compiler-v2/tests/checking/typing/assign_nested.exp

Diagnostics:
error: the left-hand side has 3 items but the right-hand side provided 4
   ┌─ tests/checking/typing/assign_nested.move:14:9
   │
14 │         (_, x, _) = four();
   │         ^^^^^^^^^

warning: A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon, not needed here.
   ┌─ tests/checking/typing/assign_nested.move:14:27
   │
14 │         (_, x, _) = four();
   │                           ^
